--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.29
-  maximum: 7.08
-  average: 6.72
-  UpdateDay: '2022-05-10T12:30:38.242638'
+  minimum: 5.66
+  maximum: 7.18
+  average: 6.43
+  UpdateDay: '2022-05-10T15:30:37.218883'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 45459
+  Rank: 45560
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 34.7
   UpdateDay: '2022-05-10T09:30:30.575617'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 42096
+  Rank: 42196
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -68,12 +68,12 @@ proxies:
   cipher: aes-256-cfb
   password: '4415934295'
   success_rate: 100.0
-  minimum: 9.67
-  maximum: 86.14
-  average: 35.47
-  UpdateDay: '2022-05-10T12:30:35.082705'
+  minimum: 10.43
+  maximum: 11.12
+  average: 10.83
+  UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 37342
+  Rank: 37443
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,12 +83,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 62.22
-  maximum: 67.56
-  average: 65.02
-  UpdateDay: '2022-05-10T12:30:38.874063'
+  minimum: 59.92
+  maximum: 97.31
+  average: 73.52
+  UpdateDay: '2022-05-10T15:30:37.962299'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 30652
+  Rank: 30733
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -98,12 +98,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.2
-  maximum: 59.79
-  average: 46.9
-  UpdateDay: '2022-05-10T12:30:38.489319'
+  minimum: 40.79
+  maximum: 48.5
+  average: 43.83
+  UpdateDay: '2022-05-10T15:30:37.727232'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 30156
+  Rank: 30242
+- name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
+  server: hk-hkg-shhk-001-tr.cdn.savoy.click
+  port: 20089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: SfobRIcergHchqBFzzua
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 12.18
+  maximum: 39.75
+  average: 27.88
+  UpdateDay: '2022-05-10T15:30:37.697133'
+  PFirstFoundDay: '2022-03-13T18:26:01.142104'
+  Rank: 27348
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -116,22 +131,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 27279
-- name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
-  server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  port: 20089
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 12.31
-  maximum: 49.31
-  average: 34.67
-  UpdateDay: '2022-05-10T12:30:38.453060'
-  PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 27252
+  Rank: 27329
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,12 +141,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 57.34
-  maximum: 59.64
-  average: 58.24
-  UpdateDay: '2022-05-10T12:30:38.851442'
+  minimum: 83.92
+  maximum: 91.51
+  average: 87.69
+  UpdateDay: '2022-05-10T15:30:37.988875'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 24645
+  Rank: 24706
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 75.99
-  maximum: 86.74
-  average: 81.4
-  UpdateDay: '2022-05-10T12:30:39.000226'
+  minimum: 89.53
+  maximum: 99.81
+  average: 96.13
+  UpdateDay: '2022-05-10T15:30:38.570425'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 21323
+  Rank: 21375
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -171,12 +171,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.67
-  maximum: 56.25
-  average: 44.05
-  UpdateDay: '2022-05-10T12:30:38.799130'
+  minimum: 41.62
+  maximum: 47.46
+  average: 45.27
+  UpdateDay: '2022-05-10T15:30:37.801050'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 20884
+  Rank: 20947
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -188,7 +188,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 19574
+  Rank: 19669
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -203,7 +203,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 19320
+  Rank: 19395
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -213,12 +213,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.21
-  maximum: 64.43
-  average: 53.97
-  UpdateDay: '2022-05-10T12:30:39.119566'
+  minimum: 41.51
+  maximum: 73.72
+  average: 62.54
+  UpdateDay: '2022-05-10T15:30:39.058977'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 18978
+  Rank: 19069
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -230,7 +230,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 17925
+  Rank: 18008
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -245,22 +245,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 17503
+  Rank: 17593
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.93
-  maximum: 48.73
-  average: 42.88
-  UpdateDay: '2022-05-10T12:30:38.475692'
+  minimum: 38.83
+  maximum: 45.21
+  average: 42.5
+  UpdateDay: '2022-05-10T15:30:37.740363'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15937
+  Rank: 15989
 - alterId: 0
   cipher: auto
   http-opts:
@@ -285,7 +285,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 15203
+  Rank: 15211
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -295,12 +295,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.0
-  maximum: 43.13
-  average: 41.18
-  UpdateDay: '2022-05-10T12:30:38.829700'
+  minimum: 42.18
+  maximum: 47.23
+  average: 45.13
+  UpdateDay: '2022-05-10T15:30:37.930837'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 14715
+  Rank: 14818
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -315,7 +315,7 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 14550
+  Rank: 14645
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
@@ -325,12 +325,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.7
-  maximum: 50.17
-  average: 45.3
-  UpdateDay: '2022-05-10T12:30:38.800443'
+  minimum: 39.08
+  maximum: 2069.96
+  average: 718.45
+  UpdateDay: '2022-05-10T15:30:39.848341'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 14266
+  Rank: 14348
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -343,8 +343,8 @@ proxy-groups:
   - 101.91.121.247:50004@ss
   - 106.180.225.69:1443@trojan
   - hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
-  - fkgfw-prod.i.sxl.cn:443@ss
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
+  - fkgfw-prod.i.sxl.cn:443@ss
   - 210.152.13.168:443@trojan
   - 2.58.242.43:443@trojan
   - www.zx07.top:443@trojan
