--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.8
-  maximum: 12.03
-  average: 8.57
-  UpdateDay: '2022-05-10T18:30:32.655258'
+  minimum: 7.52
+  maximum: 7.81
+  average: 7.62
+  UpdateDay: '2022-05-10T21:30:28.180600'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 46051
+  Rank: 46152
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,12 +55,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 16.7
-  maximum: 58.92
-  average: 34.7
-  UpdateDay: '2022-05-10T09:30:30.575617'
+  minimum: 12.24
+  maximum: 18.15
+  average: 15.79
+  UpdateDay: '2022-05-10T21:30:28.193329'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 42696
+  Rank: 42797
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -73,7 +73,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 37393
+  Rank: 37243
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,27 +83,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 60.62
-  maximum: 64.8
-  average: 62.09
-  UpdateDay: '2022-05-10T18:30:33.293067'
+  minimum: 71.69
+  maximum: 95.65
+  average: 80.87
+  UpdateDay: '2022-05-10T21:32:02.498429'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 31084
+  Rank: 31141
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 14.11
-  maximum: 50.98
-  average: 36.43
-  UpdateDay: '2022-05-10T18:30:32.881008'
+  minimum: 13.3
+  maximum: 66.21
+  average: 40.09
+  UpdateDay: '2022-05-10T21:30:28.251398'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 30703
+  Rank: 30789
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -113,12 +113,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 10.6
-  maximum: 41.42
-  average: 25.6
-  UpdateDay: '2022-05-10T18:30:32.998505'
+  minimum: 13.79
+  maximum: 39.99
+  average: 23.48
+  UpdateDay: '2022-05-10T21:32:02.222019'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 27764
+  Rank: 27856
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -131,22 +131,22 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 27720
+  Rank: 27764
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 62.44
-  maximum: 71.43
-  average: 66.34
-  UpdateDay: '2022-05-10T18:30:33.301214'
+  minimum: 97.63
+  maximum: 1118.38
+  average: 441.78
+  UpdateDay: '2022-05-10T21:30:41.272839'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 25002
+  Rank: 25029
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 81.24
-  maximum: 85.93
-  average: 84.36
-  UpdateDay: '2022-05-10T18:30:33.421339'
+  minimum: 180.46
+  maximum: 191.77
+  average: 186.44
+  UpdateDay: '2022-05-10T21:32:03.084147'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 21621
+  Rank: 21648
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -171,12 +171,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.4
-  maximum: 47.24
-  average: 44.83
-  UpdateDay: '2022-05-10T18:30:33.134928'
+  minimum: 38.58
+  maximum: 40.06
+  average: 39.13
+  UpdateDay: '2022-05-10T21:32:02.315751'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 21414
+  Rank: 21507
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -188,7 +188,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 20147
+  Rank: 20205
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -203,7 +203,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 19745
+  Rank: 19815
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -213,12 +213,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.16
-  maximum: 44.07
-  average: 40.34
-  UpdateDay: '2022-05-10T18:30:34.318459'
+  minimum: 141.53
+  maximum: 1145.37
+  average: 479.77
+  UpdateDay: '2022-05-10T21:32:04.001395'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 19460
+  Rank: 19505
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -230,7 +230,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 18463
+  Rank: 18536
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -245,22 +245,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 18004
+  Rank: 18095
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.92
-  maximum: 43.43
-  average: 39.7
-  UpdateDay: '2022-05-10T18:30:33.042343'
+  minimum: 39.83
+  maximum: 43.96
+  average: 41.55
+  UpdateDay: '2022-05-10T21:32:02.272455'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 16193
+  Rank: 16205
 - alterId: 0
   cipher: auto
   http-opts:
@@ -285,22 +285,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 15427
+  Rank: 15455
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
+  password: 82a115db-6e59-4319-973lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.55
-  maximum: 42.38
-  average: 41.9
-  UpdateDay: '2022-05-10T18:30:33.237376'
+  minimum: 38.53
+  maximum: 56.53
+  average: 45.37
+  UpdateDay: '2022-05-10T21:32:02.430950'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 15310
+  Rank: 15416
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -315,22 +315,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 15102
+  Rank: 15187
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.33
-  maximum: 46.89
-  average: 41.42
-  UpdateDay: '2022-05-10T18:30:33.126110'
+  minimum: 38.72
+  maximum: 3074.24
+  average: 1050.66
+  UpdateDay: '2022-05-10T21:30:34.428453'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 14574
+  Rank: 14611
 proxy-groups:
 - name: PG-default
   type: fallback
